# falcon-intelligence

./: .gitignore  AGENT_GUIDE.md  FALCON_INTELLIGENCE_PRODUCT_ROADMAP.md  README.md  pyproject.toml
docs/: appraisal-intelligence-data-model.md  architecture.md  assignment-discovery.md  assignment-profiles.md  cli.md  data-confidence-provenance-model.md  demo-readiness-review-v3.md  development.md  falcon-integration-contract.md  falcon-order-intelligence-loop.md  falcon-ui-integration-notes.md  intelligence-map-workspace-contract.md  intelligence-match-policy.md  intelligence-workspace-falcon-shell-integration.md  intelligence-workspace-map-experience.md  intelligence-workspace-state-model.md  internal-design-review-v2.md  manifest-search.md  metadata-scanning.md  overview.md  premium-module.md  production-gate-review-packet-template.md  property-library.md  react-readiness-contract-gap-review.md  real-data-production-readiness-gate.md  report-field-registry.md  safety.md  scan-manifests.md  schema-changelog.md  schema-version-registry.md  session-handoff-roadmap.md  session-handoff.md  stakeholder-review-packet-v3.md  synthetic-firm-intelligence-matcher.md  verified-intelligence-extraction-pipeline.md  verified-intelligence-workflow.md  workflow-comprehension-review-v3.md  workspace-cohesion-review-v3_5.md
frontend/: index.html  package-lock.json  package.json
scripts/: run_anchor_inventory.py  run_anchor_to_field_diagnostics.py  run_extraction_coverage.py  run_extraction_diagnostics.py  run_ocr_feasibility.py  run_ocr_layout_pilot.py  smoke_anchor_inventory.py  (+38 more)
(+144 files in other folders)
