[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "falcon-intelligence"
version = "0.1.0"
description = "Local-first framework scaffold for Falcon Intelligence."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Falcon Intelligence" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
