[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "falcon-intelligence"
version = "0.1.0"
description = "Local-first framework scaffold for Falcon Intelligence."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Falcon Intelligence" }
]
dependencies = []

[project.optional-dependencies]
pdf = [
  "pypdf>=5,<7",
]
docx = [
  "python-docx>=1.1,<2",
]
ocr = [
  "pymupdf>=1.24,<2",
  "pytesseract>=0.3,<0.4",
  "Pillow>=10,<12",
]
dev = [
  "pytest>=8,<9",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
]

[project.scripts]
falcon-intel = "falcon_intel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
